test/errors/variables/uninit_fail.hy
// EXPECT_DIAGNOSTIC: Expected '(' or '=' after identifier in top-level declaration
// EXPECT_DIAGNOSTIC: Unknown variable name: flag
// This test should fail - variables without initialization
int x
bool flag
